<resources>
    <string name="app_name">ToDo</string>
    <string name="dialog_edit_task_input_title_hint">内容</string>
    <string name="dialog_edit_task_input_memo_hint">メモ</string>
    <string name="dialog_edit_task_input_done_hint">完了済にする</string>
    <string name="activity_main_input_hint">タスクを追加</string>
    <string name="close">閉じる</string>
    <string name="abort">やめる</string>
    <string name="delete_all">全て削除</string>
    <string name="delete_all_confirm">タスクを全て削除しますか？</string>
    <string name="delete_this_task">削除する</string>
    <string name="update_this">この内容で更新</string>
    <string name="dialog_edit_task_title">タスクを編集</string>
    <string name="dialog_delete_all_item_confirm_title">タスクの全削除</string>
    <string name="done">Done!</string>
    <string name="dialog_delete_task_title">タスクの削除</string>
    <string name="confirm_delete">削除しますか？</string>
    <string name="delete">削除する</string>
    <string name="menu_main_delete_all">すべて削除</string>
    <string name="menu_main_about">このアプリについて</string>
    <string name="menu_main_oss">オープンソースライセンス</string>
    <string name="set_deadline">期限を設定</string>
    <string name="to_be_done">完了済にする</string>
    <string name="already_done">完了済</string>
</resources>
