<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="jp.miyanqii.todo.view.MainActivity">
    <item
        android:id="@+id/action_delete_all"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="50"
        android:title="@string/menu_main_delete_all"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/menu_main_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_oss"
        android:orderInCategory="150"
        android:title="@string/menu_main_oss"
        app:showAsAction="never" />
</menu>
