<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="task"
            type="jp.miyanqii.todo.model.entity.Task" />
    </data>

    <ScrollView
        android:id="@+id/dialog_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="8dp"
                android:checked="@={task.finished}"
                android:hint="@string/dialog_edit_task_input_done_hint" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dialog_edit_task_input_title_hint"
                    android:inputType="text"
                    android:text="@={task.title}" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_memo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dialog_edit_task_input_memo_hint"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:text="@={task.memo}" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>
</layout>